add routes and add dividers in nav bar

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
     "name": "mean",
     "version": "1.0.0",
+    "appPath": "public",
     "dependencies": {
         "bootstrap": "2.3.2",
         "angular": "~1.0.6",
